# Lighter_xyz_trade-analysis

./: .gitignore  BADGES.md  CHANGELOG.md  CODECOV_SETUP.md  CONTRIBUTING.md  GITHUB_UPLOAD_GUIDE.md  LICENSE  MANIFEST.in  README.md  README_CN.md  app.py  check_github_ready.py  example_analysis.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: pages.yml  python-app.yml
data/: README.md
tests/: test_trade_analyzer.py
trade_analyzer/: __init__.py  analyzer.py  data_processor.py  visualizer.py
